# cube-astar

./: CMakeLists.txt  README.md
src/: cube.cpp  cube.h  main.cpp
